<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="8dp"
        tools:context="com.noteIt.noteAdd.NoteAddFragment">

        <EditText
            android:id="@+id/add_note_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/title"
            android:inputType="text"
            android:maxLines="1"
            android:paddingBottom="16dp"
            android:textSize="24dp" />

        <EditText
            android:id="@+id/add_note_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@null"
            android:gravity="top"
            android:hint="@string/description"
            android:inputType="textCapSentences|textMultiLine"
            android:textSize="16dp" />

        <TextView
            android:id="@+id/add_task_text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="8dp"
            android:paddingLeft="36dp"
            android:paddingTop="16dp"
            android:text="+ Add New Task"
            android:textSize="24sp" />

        <android.support.v7.widget.RecyclerView
            android:id="@+id/task_recycler_view_add"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusable="true" />
    </LinearLayout>
</android.support.v4.widget.NestedScrollView>