<?xml version="1.0" encoding="utf-8"?>


<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="8dp"
        tools:context="com.noteIt.noteDetail.NoteDetailFragment"
        tools:showIn="@layout/notedetail_act">

        <EditText
            android:id="@+id/detail_note_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/title"
            android:inputType="text"
            android:maxLines="1"
            android:textSize="24sp" />

        <EditText
            android:id="@+id/detail_note_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="top"
            android:hint="@string/description"
            android:inputType="textCapSentences|textMultiLine"
            android:textSize="16dp"
            android:background="@null"
            />

        <TextView
            android:id="@+id/add_task_text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="36dp"
            android:paddingEnd="36dp"
            android:textSize="16sp"
            android:paddingTop="16dp"
            android:paddingBottom="8dp"
            android:text="+ Add New Task" />

        <android.support.v7.widget.RecyclerView
            android:id="@+id/task_recycler_view_detail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusable="true" />
    </LinearLayout>
</android.support.v4.widget.NestedScrollView>


