<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:id="@+id/layout_layout" android:checkableBehavior="single">
        <item android:id="@+id/menu_notes"
            android:title="Notes"/>
        <item
            android:id="@+id/menu_archived"
            android:title="Archived" />
    </group>

</menu>